fabflix-multi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-multi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fabflix-movies
  template:
    metadata:
      labels:
        app: fabflix-movies
    spec:
      containers:
        - name: fabflix-movies-container
          image: kellyh12/cs122b-p5-movies:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets: # Specifies the secret to use for pulling the image (not needed for public images)
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fabflix-movies-service
spec:
  selector:
    app: fabflix-movies
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabflix-login
  template:
    metadata:
      labels:
        app: fabflix-login
    spec:
      containers:
        - name: fabflix-login-container
          image: kellyh12/cs122b-p5-login:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fabflix-login-service
spec:
  selector:
    app: fabflix-login
  ports:
    - name: http
      port: 8080
  type: ClusterIP
